Style the label. This  commit will ensure that the lable is visible to the user.

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,3 +49,6 @@ body{
   color: white;
 
 }
+label{
+  color: white;
+}
